# HPC-and-AI

./: README.md
Cambricon MLU220/: README.md
Cambricon MLU220/代码/YOLOv3移植与优化/offline/common/: common_functions.cpp  data_provider.cpp  gflags_common.cpp  handler.cpp  queue.cpp
Cambricon MLU220/代码/YOLOv3移植与优化/offline/yolov3/: run_get_accuracy_offlinemodel.sh  run_offline_performance.sh
Cambricon MLU220/代码/YOLOv3移植与优化/offline/yolov3/src/: CMakeLists.txt
Cambricon MLU220/代码/YOLOv3移植与优化/offline/yolov3/src/post_process/: yolov3_processor.cpp  yolov3_processor.hpp
Cambricon MLU220/代码/YOLOv3移植与优化/online/yolov3/: quantize.sh  test.py
Cambricon MLU220/代码/YOLOv3移植与优化/result/: 00_Yolov3_example_accuracy_result
Cambricon MLU220/代码/YOLOv5移植与优化/: detect.py  detect_half_test.py  detect_test.py  detect_true.py  detect_true_ck.py  requirements.txt  test.py
Cambricon MLU220/代码/YOLOv5移植与优化/cnperf_layer/: bootstrap.min-v4.5.0.js
Cambricon MLU220/代码/YOLOv5移植与优化/cnperf_layer/csv/: 41868_718_8138_INIT_SYNC_ipu_core.csv  41868_718_8138_INIT_SYNC_mem_core.csv
Cambricon MLU220/代码/YOLOv5移植与优化/online/: quantize.sh  run_online_accuracy.sh
Cambricon MLU220/比赛记录/决赛/: 决赛说明.md
Cambricon MLU220/比赛记录/决赛/pytorch深入学习/: MLU介绍.md
Cambricon MLU220/比赛记录/决赛/相关知识自学过程/: Linux命令行.md  Tmux.md  make cmake.md
Cambricon MLU220/比赛记录/决赛/自动驾驶算法优化/可驾驶区域检测/: 车道线检测.md
Cambricon MLU220/比赛记录/初赛/: 逐梦杯比赛GoodLab团队简介.pptx
Cambricon MLU220/比赛记录/初赛/BANGC程序设计/: 4 BANG 语言示例与优化.md
Cambricon MLU220/比赛记录/初赛/cambricon pytorch使用基础/: MLU使用基础.md  框架移植概述.md
Cambricon MLU220/比赛记录/初赛/模型移植/: 1 逐梦杯 yolov5x 模型移植.md
DeepMDkit优化/: README.md
DeepMDkit优化/比赛记录/DP/: FQ.md  ReadME.md  调试.md
DeepMDkit优化/比赛记录/DP-kit探索/: 1.md  2.4.md  2.5.md  2.7.md  调参.md
DeepMDkit优化/比赛记录/DP/DP-kit探索/: 2.8.md  并行训练.md
DeepMDkit优化/比赛记录/DP/Daily Report/: 1.md  2.4.md  2.5.md  2.7.md
DeepMDkit优化/比赛记录/DP/Profileing/py-spy/: output_example.json
DeepMDkit优化/比赛记录/DP/report/: ASC集训.md  DP-kit原理.md  Git.md  Tmux操作.md  py-spy使用.md  python学习.md  python性能分析.md  环境配置.md
DeepMDkit优化/比赛记录/DP/调试/: 源码阅读.md
DeepMDkit优化/比赛记录/Profileing/py-spy/: output1.json  output2.json  output3.json
DeepMDkit优化/比赛记录/Profileing/py-spy/76/: output3.json
DeepMDkit优化/比赛记录/report/: DP-kit配置.md  MD原理.md  TensorFlow.md  linux.md
DeepMDkit优化/比赛记录/调试/: profiling.md  单GPU训练.md
YOLO算法优化/: README.md
YOLO算法优化/代码/YOLOv3移植与优化/: README.md
YOLO算法优化/代码/YOLOv3移植与优化/offline/: CMakeLists.txt
YOLO算法优化/代码/YOLOv3移植与优化/offline/cmake/: Dependencies.cmake  Misc.cmake  Utils.cmake
YOLO算法优化/代码/YOLOv3移植与优化/offline/common/: CMakeLists.txt  blocking_queue.cpp  pipeline.cpp  runner.cpp
YOLO算法优化/代码/YOLOv3移植与优化/offline/common/include/: handler.hpp  post_processor.hpp  queue.hpp  runner.hpp
YOLO算法优化/代码/YOLOv3移植与优化/offline/scripts/: meanAP_COCO.py
YOLO算法优化/代码/YOLOv3移植与优化/offline/yolov3/: run_get_performance_offlinemodel.sh  run_offline_accuracy.sh
YOLO算法优化/代码/YOLOv3移植与优化/offline/yolov3/data/: file_list_for_release
YOLO算法优化/代码/YOLOv3移植与优化/offline/yolov3/src/: yolov3_offline_multicore.cpp
YOLO算法优化/代码/YOLOv3移植与优化/online/yolov3/: run_online_accuracy.sh  run_online_performance.sh
YOLO算法优化/代码/YOLOv3移植与优化/result/: run_accuracy.sh  run_performance.sh
YOLO算法优化/代码/YOLOv5移植与优化/: detect_all.py  detect_mfus.py  detect_mlu.py  detect_online.py  detect_online_batchsize.py  detect_perf.py  detect_quant.py
YOLO算法优化/代码/YOLOv5移植与优化/cnperf_layer/: g6-v3.5.10.js  index.html
YOLO算法优化/代码/YOLOv5移植与优化/models/: common.py  yolo.py
YOLO算法优化/代码/YOLOv5移植与优化/online/: run_online_performance.sh
YOLO算法优化/代码/YOLOv5移植与优化/utils/: datasets.py
YOLO算法优化/比赛记录/: 比赛总结.md
YOLO算法优化/比赛记录/决赛/pytorch深入学习/: CNML.md  Cambricon PyTorch.md  线下平台.md
YOLO算法优化/比赛记录/决赛/相关知识自学过程/: Docker.md  Shell.md
YOLO算法优化/比赛记录/初赛/BANGC程序设计/: 3 寒武纪 BANG 语言.md
YOLO算法优化/比赛记录/初赛/模型移植/: MLU220介绍.md  YOLOv3模型移植.md
YOLO算法优化/比赛记录/比赛信息/: 逐梦杯比赛简介.md
cs231n_course_learning/cs231n/: Assignment.rar  Course Project.html  [Assignment #1].html  [Assignment #2].html  [Assignment #3].html  [proposal description].html
(+17 files in other folders)
